--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -60,6 +60,16 @@
 
 /* Soluzione Esercizio 4 */
 
+.ex-4-square{
+    transition: background-color 1s;
+}
+
+.ex-4-square:hover{
+    background-color: #f5f5f5;
+}
+
+/* ---------------------- */
+
 .ex-5-square {
     margin: 20px;
     width: 60px;
@@ -69,15 +79,58 @@
 
 /* Soluzione Esercizio 5 */
 
+.ex-5-square{
+    transition: width 1s;
+}
+
+.ex-5-square:hover{
+    width: 90px;
+    height: 90px;
+}
+
+.ex-5-square:active{
+    width: 30px;
+    height: 30px;
+}
+
+/* ---------------------- */
+
 .ex-6-img, .ex-7-img, .ex-8-img {
     width: 500px;
 }
 
 /* Soluzione Esercizio 6 */
 
+.ex-6-img:hover{
+    filter: grayscale(1);
+}
+
+/* ---------------------- */
+
 /* Soluzione Esercizio 7 */
 
+.ex-7-img{
+    transition: 1s;
+}
+
+.ex-7-img:hover{
+    filter: grayscale(1) blur(10px);
+}
+
+/* ---------------------- */
+
 /* Soluzione Esercizio 8 */
+
+.ex-8-img{
+    transition: border-radius 1s;
+}
+
+.ex-8-img:hover{
+    border-radius: 30%;
+    filter: grayscale(1) blur(3px);
+}
+
+/* ---------------------- */
 
 .ex-9-img {
     margin: 50px 100px;
@@ -86,17 +139,38 @@
 
 /* Soluzione Esercizio 9 */
 
+.ex-9-img{
+    transition: border-radius 1s;
+    transition: width 1s;
+}
+
+.ex-9-img:hover{
+    border-radius: 20%;
+    width: 300px;
+    filter: grayscale(1) blur(3px);
+}
+
+/* ---------------------- */
+
 .ex-10-icon {
     font-size: 60px;
 }
 
 /* Soluzione Esercizio 10 */
 
+
+
+/* ---------------------- */
+
 .ex-11-icon {
     font-size: 60px;
 }
 
 /* Soluzione Esercizio 11 */
+
+
+
+/* ---------------------- */
 
 .ex-12-button, .ex-13-button {
     position: relative;
@@ -131,4 +205,12 @@
 
 /* Soluzione Esercizio 12 */
 
+
+
+/* ---------------------- */
+
 /* Soluzione Esercizio 13 */
+
+
+
+/* ---------------------- */
